Remove index.html, package-lock.json, and various components; update package.json and tsconfig for new structure and dependencies; add .dynamodb to .gitignore.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,10 +24,19 @@
             "node",
             "react",
             "react-dom"
-        ]
+        ],
+        "baseUrl": ".",
+        "paths": {
+            "@/*": [
+                "src/webapp/*"
+            ],
+            "@shared/*": [
+                "src/shared/*"
+            ]
+        }
     },
     "include": [
-        "src"
+        "src/webapp"
     ],
     "references": [
         {
