--- a/package.json
+++ b/package.json
@@ -1,41 +1,46 @@
 {
   "name": "nightjet-notify",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.1.0",
   "type": "module",
-  "dependencies": {
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.10",
-    "@mui/material": "^5.15.10",
-    "@mui/x-date-pickers": "^6.19.4",
-    "@tanstack/react-query": "^5.20.5",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.1",
-    "@types/node": "^20.11.19",
-    "@types/nodemailer": "^6.4.17",
-    "axios": "^1.6.7",
-    "cors": "^2.8.5",
-    "date-fns": "^2.30.0",
-    "express": "^5.1.0",
-    "nodemailer": "^6.10.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^4.9.5"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.57",
-    "@types/react-dom": "^18.2.19",
-    "@vitejs/plugin-react": "^4.2.1",
-    "tsx": "^4.19.3",
-    "vite": "^5.1.3"
-  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "server": "tsx src/server/index.ts"
+    "serverless:dev": "cross-env IS_OFFLINE=true serverless offline start --stage dev",
+    "serverless:deploy": "serverless deploy --stage prod"
+  },
+  "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.782.0",
+    "@aws-sdk/client-ses": "^3.782.0",
+    "@aws-sdk/lib-dynamodb": "^3.782.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/material": "^5.15.10",
+    "@mui/x-date-pickers": "^6.18.6",
+    "@tanstack/react-query": "^5.20.5",
+    "aws-sdk": "^2.1565.0",
+    "date-fns": "^2.30.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "serverless-dynamodb": "^0.2.56",
+    "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "@types/aws-lambda": "^8.10.134",
+    "@types/node": "^20.11.19",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
+    "@types/uuid": "^9.0.8",
+    "@vitejs/plugin-react": "^4.2.1",
+    "cross-env": "^7.0.3",
+    "serverless": "^3.40.0",
+    "serverless-dotenv-plugin": "^6.0.0",
+    "serverless-esbuild": "^1.55.0",
+    "serverless-offline": "^13.3.3",
+    "typescript": "^5.2.2",
+    "vite": "^5.1.0"
   },
   "eslintConfig": {
     "extends": [
