--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -4,9 +4,12 @@
         "skipLibCheck": true,
         "module": "ESNext",
         "moduleResolution": "bundler",
-        "allowSyntheticDefaultImports": true
+        "allowSyntheticDefaultImports": true,
+        "strict": true
     },
     "include": [
-        "vite.config.ts"
+        "vite.config.ts",
+        "src/serverless",
+        "src/shared"
     ]
 }
