--- a/serverless.yml
+++ b/serverless.yml
@@ -1,12 +1,12 @@
 service: nightjet-notify
 
-frameworkVersion: '3'
+frameworkVersion: "3"
 
 useDotenv: true
 
 provider:
   name: aws
-  runtime: nodejs18.x
+  runtime: nodejs20.x
   stage: ${opt:stage, 'dev'}
   region: eu-west-2
   environment:
@@ -25,7 +25,7 @@ provider:
             - dynamodb:DeleteItem
             - dynamodb:Scan
             - dynamodb:UpdateItem
-          Resource: 
+          Resource:
             - "arn:aws:dynamodb:${self:provider.region}:*:table/${self:service}-alerts-${sls:stage}"
         - Effect: Allow
           Action:
@@ -48,20 +48,21 @@ plugins:
   - serverless-domain-manager
   - serverless-esbuild
   - serverless-offline
-  
+
 custom:
   customDomain:
     domainName: api.nightjet-notify.com
-    basePath: ''
+    basePath: ""
     stage: ${self:provider.stage}
     createRoute53Record: true
-    endpointType: 'regional'
+    endpointType: "regional"
     securityPolicy: tls_1_2
     apiType: rest
     createApexRecord: false
     hostedZoneId: ${ssm:/nightjet-notify/${sls:stage}/hosted-zone-id, ''}
-    certificateName: '*.nightjet-notify.com'
+    certificateName: "*.nightjet-notify.com"
     certificateArn: ${ssm:/nightjet-notify/${sls:stage}/certificate-arn, ''}
+    certificateRegion: ${ssm:/nightjet-notify/${sls:stage}/certificate-region, 'us-east-1'}
   s3Sync:
     - bucketName: ${self:service}-webapp-${sls:stage}
       localDir: dist
@@ -71,18 +72,24 @@ custom:
     bundle: true
     minify: false
     sourcemap: true
-    external: ['@aws-sdk/client-dynamodb', '@aws-sdk/lib-dynamodb', '@aws-sdk/client-ses', 'util']
+    external:
+      [
+        "@aws-sdk/client-dynamodb",
+        "@aws-sdk/lib-dynamodb",
+        "@aws-sdk/client-ses",
+        "util",
+      ]
     exclude: []
-    target: 'node18'
-    platform: 'node'
+    target: "node20"
+    platform: "node"
     concurrency: 10
     watch:
-      pattern: ['src/**/*.ts']
-      ignore: ['temp/**/*']
-    packager: 'yarn'
-    format: 'cjs'
+      pattern: ["src/**/*.ts"]
+      ignore: ["temp/**/*"]
+    packager: "yarn"
+    format: "cjs"
     define:
-      'process.env.NODE_ENV': "'development'"
+      "process.env.NODE_ENV": "'development'"
   serverless-offline:
     httpPort: 3001
     lambdaPort: 3003
@@ -91,8 +98,8 @@ custom:
     start:
       port: 8000
       inMemory: true
-      heapInitial: '200m'
-      heapMax: '1g'
+      heapInitial: "200m"
+      heapMax: "1g"
       migrate: true
       seed: true
       convertEmptyValues: true
@@ -110,6 +117,7 @@ functions:
       - http:
           path: /alerts
           method: post
+          cors: true
 
   getAlerts:
     handler: src/serverless/handlers/alerts.getAlerts
@@ -117,6 +125,7 @@ functions:
       - http:
           path: /alerts
           method: get
+          cors: true
 
   deleteAlert:
     handler: src/serverless/handlers/alerts.deleteAlert
@@ -124,12 +133,23 @@ functions:
       - http:
           path: /alerts/{id}
           method: delete
+          cors: true
 
   # Daily check for available tickets
   checkAlerts:
     handler: src/serverless/handlers/alerts.checkAlerts
     events:
       - schedule: rate(1 hour)
+
+  proxy:
+    handler: src/serverless/handlers/proxy.proxyRequest
+    environment:
+      TARGET_URL: ${ssm:/nightjet-notify/${sls:stage}/proxy/target-url, env:TARGET_URL, 'https://www.nightjet.com/nj-booking-ocp/'}
+    events:
+      - http:
+          path: /proxy/{proxy+}
+          method: ANY
+          cors: true
 
 resources:
   Resources:
@@ -146,32 +166,36 @@ resources:
         BillingMode: PAY_PER_REQUEST
         SSESpecification:
           SSEEnabled: true
-    WebappBucket:
-      Type: AWS::S3::Bucket
+    WebappBucketPolicy:
+      Type: AWS::S3::BucketPolicy
       Properties:
-        BucketName: ${self:service}-webapp-${sls:stage}
-        PublicAccessBlockConfiguration:
-          BlockPublicAcls: false
-          BlockPublicPolicy: false
-          IgnorePublicAcls: false
-          RestrictPublicBuckets: false
-        CorsConfiguration:
-          CorsRules:
-            - AllowedHeaders: ['*']
-              AllowedMethods: [GET, HEAD]
-              AllowedOrigins: ['*']
-              MaxAge: 3000
-    # WebappBucketPolicy:
-    #   Type: AWS::S3::BucketPolicy
-    #   Properties:
-    #     Bucket: !Ref WebappBucket
-    #     PolicyDocument:
-    #       Version: '2012-10-17'
-    #       Statement:
-    #         - Effect: Allow
-    #           Principal: '*'
-    #           Action: s3:GetObject
-    #           Resource: !Join ['', [!GetAtt WebappBucket.Arn, '/*']]
+        Bucket: nightjet-notify-webapp-${sls:stage}
+        PolicyDocument:
+          Version: "2012-10-17"
+          Statement:
+            - Sid: CloudFrontAccess
+              Effect: Allow
+              Principal:
+                Service: cloudfront.amazonaws.com
+              Action: s3:GetObject
+              Resource:
+                !Join [
+                  "",
+                  ["arn:aws:s3:::nightjet-notify-webapp-${sls:stage}/*"],
+                ]
+              Condition:
+                StringEquals:
+                  AWS:SourceArn:
+                    !Join [
+                      "",
+                      [
+                        "arn:aws:cloudfront::",
+                        !Ref "AWS::AccountId",
+                        ":distribution/",
+                        !Ref CloudFrontDistribution,
+                      ],
+                    ]
+
     CloudFrontDistribution:
       Type: AWS::CloudFront::Distribution
       Properties:
@@ -179,22 +203,34 @@ resources:
           Enabled: true
           DefaultRootObject: index.html
           Origins:
-            - DomainName: !GetAtt WebappBucket.RegionalDomainName
+            - DomainName:
+                !Join [
+                  ".",
+                  [
+                    "nightjet-notify-webapp-${sls:stage}",
+                    "s3",
+                    !Ref "AWS::Region",
+                    "amazonaws",
+                    "com",
+                  ],
+                ]
               Id: S3Origin
               S3OriginConfig:
-                OriginAccessIdentity: ''
+                OriginAccessIdentity: ""
               OriginAccessControlId: !GetAtt CloudFrontOriginAccessControl.Id
           DefaultCacheBehavior:
             TargetOriginId: S3Origin
             ViewerProtocolPolicy: redirect-to-https
-            CachePolicyId: 658327ea-f89d-4fab-a63d-7e88639e58f6  # CachingOptimized
-            OriginRequestPolicyId: 88a5eaf4-2fd4-4709-b370-b4c650ea3fcf  # CORS-S3Origin
+            CachePolicyId: 658327ea-f89d-4fab-a63d-7e88639e58f6 # CachingOptimized
+            OriginRequestPolicyId: 88a5eaf4-2fd4-4709-b370-b4c650ea3fcf # CORS-S3Origin
           ViewerCertificate:
-            AcmCertificateArn: ${ssm:/nightjet-notify/${sls:stage}/certificate-arn, ''}
+            AcmCertificateArn: ${ssm:/nightjet-notify/${sls:stage}/web-certificate-arn, ''}
             SslSupportMethod: sni-only
             MinimumProtocolVersion: TLSv1.2_2021
           Aliases:
             - nightjet-notify.com
+            - www.nightjet-notify.com
+
     CloudFrontOriginAccessControl:
       Type: AWS::CloudFront::OriginAccessControl
       Properties:
@@ -203,26 +239,33 @@ resources:
           OriginAccessControlOriginType: s3
           SigningBehavior: always
           SigningProtocol: sigv4
-    # WebappBucketOACPolicy:
-    #   Type: AWS::S3::BucketPolicy
-    #   Properties:
-    #     Bucket: !Ref WebappBucket
-    #     PolicyDocument:
-    #       Version: '2012-10-17'
-    #       Statement:
-    #         - Effect: Allow
-    #           Principal:
-    #             Service: cloudfront.amazonaws.com
-    #           Action: s3:GetObject
-    #           Resource: !Join ['', [!GetAtt WebappBucket.Arn, '/*']]
-    #           Condition:
-    #             StringEquals:
-    #               AWS:SourceArn: !Join ['', ['arn:aws:cloudfront::', !Ref 'AWS::AccountId', ':distribution/', !Ref CloudFrontDistribution]]
+
+    Route53Record:
+      Type: AWS::Route53::RecordSet
+      Properties:
+        HostedZoneId: ${ssm:/nightjet-notify/${sls:stage}/hosted-zone-id, ''}
+        Name: nightjet-notify.com
+        Type: A
+        AliasTarget:
+          DNSName: !GetAtt CloudFrontDistribution.DomainName
+          HostedZoneId: Z2FDTNDATAQYW2 # CloudFront's hosted zone ID
+          EvaluateTargetHealth: false
+
+    Route53WWWRecord:
+      Type: AWS::Route53::RecordSet
+      Properties:
+        HostedZoneId: ${ssm:/nightjet-notify/${sls:stage}/hosted-zone-id, ''}
+        Name: www.nightjet-notify.com
+        Type: A
+        AliasTarget:
+          DNSName: !GetAtt CloudFrontDistribution.DomainName
+          HostedZoneId: Z2FDTNDATAQYW2 # CloudFront's hosted zone ID
+          EvaluateTargetHealth: false
 
   Outputs:
     WebappBucketName:
-      Value: !Ref WebappBucket
-    # CloudFrontDistributionId:
-    #   Value: !Ref CloudFrontDistribution
-    # CloudFrontDomainName:
-    #   Value: !GetAtt CloudFrontDistribution.DomainName 
+      Value: nightjet-notify-webapp-${sls:stage}
+    CloudFrontDistributionId:
+      Value: !Ref CloudFrontDistribution
+    CloudFrontDomainName:
+      Value: !GetAtt CloudFrontDistribution.DomainName
